--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,8 +1,8 @@
-<ion-menu contentId = "main-content">
+<ion-menu contentId="main-content">
   <ion-header>
-    <ion-toolbar color = "success">
+    <ion-toolbar color="success">
       <ion-menu-toggle>
-        <ion-icon name = "close-circle-outline" size = "large"></ion-icon>
+        <ion-icon name="close-circle-outline" size="large"></ion-icon>
       </ion-menu-toggle>
       <ion-title>Menú</ion-title>
     </ion-toolbar>
@@ -22,12 +22,16 @@
           <ion-icon slot="start" name="albums-outline"></ion-icon>
           <ion-label>Álbumes</ion-label>
         </ion-item>
+        <ion-item button routerLink="/menu/favorites" routerDirection="root">
+          <ion-icon slot="start" name="heart-outline"></ion-icon>
+          <ion-label>Favoritos</ion-label>
+        </ion-item>
         <ion-item button routerLink="/intro" routerDirection="root">
-          <ion-icon slot="start" name = "information-circle-outline"></ion-icon>
+          <ion-icon slot="start" name="information-circle-outline"></ion-icon>
           <ion-label> Intro </ion-label>
         </ion-item>
-        <ion-item button (click) = "logout()" routerDirection = "root">
-          <ion-icon slot = "start" name = "log-out-outline"></ion-icon>
+        <ion-item button (click)="logout()" routerDirection="root">
+          <ion-icon slot="start" name="log-out-outline"></ion-icon>
           <ion-label> Cerrar Sesión </ion-label>
         </ion-item>
       </ion-menu-toggle>
@@ -35,6 +39,6 @@
   </ion-content>
 </ion-menu>
 
-<div class = "ion-page" id = "main-content">
+<div class="ion-page" id="main-content">
   <ion-router-outlet></ion-router-outlet>
 </div>
