--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,39 +1,55 @@
 body.theme-light {
   --ion-background-color: #ffffff;
   --ion-text-color: #111827;
+  --ion-text-color-rgb: 17, 24, 39;
   --ion-item-background: #ffffff;
   --ion-card-background: #ffffff;
   --ion-toolbar-background: #f8fafc;
   --ion-toolbar-color: #111827;
   --ion-color-primary: #3880ff;
+  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-secondary: #0cd1e8;
+  --ion-border-color: rgba(0, 0, 0, 0.1);
 }
 
 body.theme-dark {
   --ion-background-color: #121212;
   --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
   --ion-item-background: #1e1e1e;
   --ion-card-background: #1e1e1e;
   --ion-toolbar-background: #1f1f1f;
   --ion-toolbar-color: #ffffff;
-  --ion-color-primary: #ffffff; 
+  --ion-color-primary: #ffffff;
+  --ion-color-primary-rgb: 255, 255, 255;
+  --ion-color-secondary: #4dabf7;
+  --ion-border-color: rgba(255, 255, 255, 0.1);
 }
 
 body.theme-rosa {
   --ion-background-color: #ffeef2;
   --ion-text-color: #680028;
+  --ion-text-color-rgb: 104, 0, 40;
   --ion-item-background: #ffeef2;
   --ion-card-background: #fff0f5;
   --ion-toolbar-background: #ff69b4;
   --ion-toolbar-color: #ffffff;
-  --ion-color-primary: #d63384; 
+  --ion-color-primary: #d63384;
+  --ion-color-primary-rgb: 214, 51, 132;
+  --ion-color-secondary: #ff1493;
+  --ion-border-color: rgba(214, 51, 132, 0.2);
 }
 
 body.theme-amarillo {
   --ion-background-color: #fffacd;
   --ion-text-color: #3d3d00;
+  --ion-text-color-rgb: 61, 61, 0;
   --ion-item-background: #fffacd;
   --ion-card-background: #fffbe6;
   --ion-toolbar-background: #ffd700;
   --ion-toolbar-color: #000000;
   --ion-color-primary: #cca300;
+  --ion-color-primary-rgb: 204, 163, 0;
+  --ion-color-secondary: #f4a460;
+  --ion-border-color: rgba(204, 163, 0, 0.2);
 }
